--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,6 +24,9 @@ nav a{
     color: #bebebe;
     
 }
+.onpage{
+    color: whitesmoke;
+}
 
 a:hover{
     
@@ -75,4 +78,36 @@ button:hover{
     -o-transition: background-color 2s ease-out;
     transition: background-color 2s ease-out;
     
+}
+
+.input-group-text{
+    
+    width: fit-content;
+  display: inline-block;
+  margin: 5px;
+}
+
+.row{
+    width: 100%;
+}
+.col {
+ margin: 2px;
+}
+.center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.underline{
+    border-bottom: 2px solid whitesmoke ;
 }
